fix: layout issues

--- a/src/components/Player/style.css
+++ b/src/components/Player/style.css
@@ -40,3 +40,9 @@
     height: calc(100vh - 80px);
   }
 }
+
+@media screen and (max-width: 480px) {
+  .player > .song-name > h1 {
+    font-size: 1.5rem;
+  }
+}
